--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YXJyaXZpbmctYXNwLTIuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_07N0G5qlxqB8g3EKRm4OntEygiDU64UtS9l7s0lWyG
-ADMIN_EMAIL=keyamuha@gmail.com
+ADMIN_EMAILS=keyamuha@gmail.com,fricker2025@gmail.com
 PORT=3000
